Fix sonar issues in modeling/toscaparsers
Fix Make "_value" transient or serializable issue
Fix Extract the assignment out of this expression issue

Issue-ID: MODELING-154
Change-Id: If6df4bcfcc250179078d7537010a8fb9d8376958
Signed-off-by: Parshad Patel <pars.patel@samsung.com>